src/test/ui/foreign-unsafe-fn-called.rs
mod test {
    extern {
        pub fn free();
    }
}

fn main() {
    test::free();
    //~^ ERROR call to unsafe function is unsafe
}
